--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -63,7 +63,7 @@ textarea{
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url("path/to/your/image.jpg");
+    background-image: url("Images/photo1704729321.png");
     opacity: 0.7;
   }
   
