--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -56,17 +56,7 @@ textarea{
 
 }
 
-  .section__one::before {
-    content: "";
-    position: absolute;
-    top: 20px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url("path/to/your/image.jpg");
-    opacity: 0.7;
-  }
-  
+  /*  */
 
 
 #section__one_second {
@@ -120,7 +110,7 @@ width: 100%;
     background-color: rgb(72 61 140);
     height: 30%;
     width: 100%;
-    background-image: url(/Images/photo1704729310.jpeg);
+    background-image: url('/Images/photo1704729310.jpeg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
