--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -56,28 +56,12 @@ textarea{
 
 }
 
-<<<<<<< HEAD
-  /*  */
-=======
-  .section__one::before {
-    content: "";
-    position: absolute;
-    top: 20px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url("Images/photo1704729321.png");
-    opacity: 0.7;
-  }
-  
->>>>>>> 941cd80106226e8fe8a5b0dd264046b2c0f57be7
-
 
 #section__one_second {
     width:600px;
     height:335px;
     margin-top: 20px;
-    background-image: url('Images/photo1704729321.png'); 
+    background-image: url('../Images/photo1704729321.png'); 
     background-position: 120px 0px;
     background-color: rgb(72 61 140);
     background-clip: border-box;
@@ -124,7 +108,7 @@ width: 100%;
     background-color: rgb(72 61 140);
     height: 30%;
     width: 100%;
-    background-image: url('Images/photo1704729310.jpeg');
+    background-image: url('../Images/photo1704729310.jpeg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
